--- a/HTML5/public/html/canvas2img.html
+++ b/HTML5/public/html/canvas2img.html
@@ -44,6 +44,8 @@
             return image;
         }
 
-        convertCanvasToImage(document.getElementById("cv"));
+        $('body').append(convertCanvasToImage(document.getElementById("cv")))
+
+
     </script>
 </html>
