--- a/HTML5/public/html/index.html
+++ b/HTML5/public/html/index.html
@@ -8,7 +8,8 @@
         <h1>html5效果</h1>
         <ul>
             <li><a href="/img2Code" target="_blank">canvas加载图片转成字符码</a></li>
-            <li><a href="/canvas2img" target="_blank">canvas加载图片转成字符码</a></li>
+            <li><a href="/canvas2img" target="_blank">canvas转换为图片</a></li>
+            <li><a href="/zingChart" target="_blank">使用ZingChart生成报表</a></li>
         </ul>
     </body>
     <script src="/vendor/jquery.js"></script>
