--- a/HTML5/public/html/index.html
+++ b/HTML5/public/html/index.html
@@ -10,6 +10,7 @@
             <li><a href="/img2Code" target="_blank">canvas加载图片转成字符码</a></li>
             <li><a href="/canvas2img" target="_blank">canvas转换为图片</a></li>
             <li><a href="/zingChart" target="_blank">使用ZingChart生成报表</a></li>
+            <li><a href="/chinaMap" target="_blank">使用D3生成中国地图</a></li>
         </ul>
     </body>
     <script src="/vendor/jquery.js"></script>
