--- a/HTML5/public/html/zingChart.html
+++ b/HTML5/public/html/zingChart.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>使用ZingChart生成报表<%=settings.name%></title>
+        <title>使用ZingChart生成报表<%=name%></title>
         <link rel="stylesheet" type="text/css" href="/styles/common.css"/>
     </head>
     <body>
