--- a/HTML5/html5Example/svg/svg.html
+++ b/HTML5/html5Example/svg/svg.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>html5</title>
+        <style>
+            svg {
+                border: 1px solid black;
+            }
+        </style>
     </head>
     <body>
         <h1>html5效果canvas</h1>
@@ -54,6 +59,19 @@
             <rect x="10" y="20" width="100" height="80" stroke="red" fill="url(#RedBlcakGradient)" />
             <circle cx="120" cy="80" r="40" stroke="#00f" stroke-width="8" fill="url(#GravePattern)" />
         </svg>
+
+
+        <svg width="600" height="200">
+            <text
+                x="10" y="80"
+                font-family="Droid Sans"
+                stroke="#0ff"
+                fill="#0ff"
+                font-size="40px"
+                font-weight="bold"
+            >Select this text！</text>
+        </svg>
+
     </body>
     <script src="../vendor/jquery.js"></script>
     <script src="../vendor/underscore.js"></script>
